# myKatas

./: .gitignore
example/: CMakeLists.txt  example_api.cpp  example_api.h  example_api_test.cpp  example_util.cpp
largest_series_product/: README.md
largest_series_product/src/: CMakeLists.txt  largest_series_product.cpp  largest_series_product.h  largest_series_product_test.cpp  main.cpp
